# wandb-workspaces

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FILTER_IMPROVEMENTS.md  LICENSE  Programmatic_Workspace_Tutorial.ipynb  README.md  Workspace_tutorial.ipynb  code_checks.sh  codecov.yml  demo_disabled_filters.py  demo_or_groups.py  demo_parens_bug.py  demo_report_write.py  demo_string_filters.py  demo_v2_read.py  demo_v2_write.py  luis_test.py  makefile  pyproject.toml  pyrightconfig.json  read_only_test.py  test_filter_groups_e2e.py  test_legacy_load.py  test_legacy_local.py  test_legacy_nesting.py  test_nested_write.py  test_or_groups_depth.py  test_scenarios.py  test_string_filters.py  test_v2_e2e.py  test_v2_local.py
.circleci/: config.yml
.github/: RELEASE_PROCESS.md  pull_request_template.md
.github/workflows/: auto-release.yml  checks.yml  prepare-release.yml  publish-release.yml  release.yml
.venv-test/: pyvenv.cfg
.venv-test2/: pyvenv.cfg
examples/reports/: 00_create_sample_report.py  01_generate_code_from_report.py  01_working_with_runset_filters.py  02_lineplot_with_regex_metrics.py  03_media_browser_with_grid_axes.py  04_per_run_settings.py  05_share_link.py  06_column_management.py
examples/workspaces/: 00_create_sample_workspace.py  01_loading_and_cloning_workspaces.py  02_basic_workspace_settings.py  03_working_with_workspace_filters.py  04_column_management.py  05_group_colors.py  06_copy_view_to_another_project.py
tests/: conftest.py  filter_test_helpers.py  test_filters.py  test_graphql.py  test_reports.py  test_utils.py  test_workspaces.py  weave_panel_factory.py
wandb_workspaces/: __init__.py  _graphql.py  expr.py
wandb_workspaces/reports/v1/: _blocks.py  _helpers.py  _panels.py  mutations.py  report.py  runset.py  util.py
wandb_workspaces/reports/v2/: __init__.py  blocks.py  expr_parsing.py  filters.py  gql.py  interface.py  internal.py
wandb_workspaces/utils/: data_generation.py  invertable_dict.py  validators.py
wandb_workspaces/workspaces/: __init__.py  _run_color_groups.py  errors.py  interface.py  internal.py
