[tool.poetry]
license = "Apache-2.0"
name = "wandb-workspaces"
version = "0.1.17"
description = "A library for programatically working with the Weights & Biases UI."
authors = ["Weights & Biases <support@wandb.com>"]
readme = "README.md"
homepage = "https://github.com/wandb/wandb-workspaces"
repository = "https://github.com/wandb/wandb-workspaces"
documentation = "https://docs.wandb.ai/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">=2.7"
wandb = ">=0.13.7"

[tool.poetry.urls]
"Bug Reports" = "https://github.com/wandb/wandb-workspaces/issues"

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "polyfactory"]
data-generation = ["pandas", "numpy"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-cov = ">=5.0"
ruff = ">=0.4"
polyfactory = ">=2.15"
pydantic = { extras = ["mypy"], version = ">=2.7" }
mypy = ">=1.10.0"
pre-commit = "^3.7.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
coverage = "^7.5.3"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# All other tool configurations remain the same
[tool.pytest.ini_options]
minversion = "6.0"
console_output_style = "count"
addopts = "-vvv --cov-config=pyproject.toml --cov=wandb-workspaces --cov-report=xml --cov-report=term"
timeout = 60
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = "tests"
filterwarnings = ["ignore::DeprecationWarning", "error:ResourceWarning"]

[tool.coverage.paths]
source = ["wandb-workspaces"]

[tool.coverage.run]
omit = [
    "tests/*",
    "wandb_workspaces/utils/data_generation.py",
    "wandb_workspaces/reports/v1/*",
]

[tool.mypy]
exclude = '^(tests|examples|wandb-workspaces/reports)/'
plugins = ["pydantic.mypy"]

# TODO: Clean up reports
[[tool.mypy.overrides]]
module = [
    "wandb_workspaces.reports.*",
    "wandb_workspaces.utils.data_generation",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["wandb_gql", "wandb_gql.*"]
ignore_missing_imports = true

[tool.ruff]
[tool.ruff.lint]
ignore = ["F401"]
