[project]
name = "wandb-workspaces"
version = "0.3.3"
description = "A library for programatically working with the Weights & Biases UI."
authors = [{ name = "Weights & Biases", email = "support@wandb.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.7",
    "wandb>=0.13.7",
]

[project.optional-dependencies]
test = []
data-generation = []

[project.urls]
Homepage = "https://github.com/wandb/wandb-workspaces"
Repository = "https://github.com/wandb/wandb-workspaces"
Documentation = "https://docs.wandb.ai/ref/wandb_workspaces/"
"Bug Reports" = "https://github.com/wandb/wandb-workspaces/issues"

[dependency-groups]
dev = [
    "pytest>=8.2,<8.4",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "polyfactory>=2.15",
    "pydantic[mypy]>=2.7",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1,<4",
    "pandas>=2.2.2,<3",
    "numpy>=1.26.4,<2",
    "coverage>=7.5.3,<8",
    "codecov>=2.1.13,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
console_output_style = "count"
addopts = "-vvv --cov-config=pyproject.toml --cov=wandb-workspaces --cov-report=xml --cov-report=term"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = "tests"
filterwarnings = ["ignore::DeprecationWarning", "error:ResourceWarning"]

[tool.coverage.paths]
source = ["wandb-workspaces"]

[tool.coverage.run]
omit = [
    "tests/*",
    "wandb_workspaces/utils/data_generation.py",
    "wandb_workspaces/reports/v1/*",
]

[tool.mypy]
exclude = '^(tests|examples|wandb-workspaces/reports)/'
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "wandb_workspaces.reports.*",
    "wandb_workspaces.utils.data_generation",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["wandb_gql", "wandb_gql.*"]
ignore_missing_imports = true

[tool.ruff.lint]
ignore = ["F401"]
